// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Abs.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================

function f(x:string) { }

module.exports = f;

=====================================output=====================================
function f(x: string) {}

module.exports = f;

================================================================================
`;

exports[`Rel.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================

var f = require('./Abs');

f(0);

=====================================output=====================================
var f = require("./Abs");

f(0);

================================================================================
`;
